# bot

./: Cargo.toml  README.md
examples/: basic.rs
src/: client.rs  error.rs  lib.rs  nav.rs
