[package]
name = "bot"
version = "0.1.0"
edition = "2021"
authors = ["Taha Hachana <tahahachana@gmail.com>"]
description = "High level browser automation API built on the webdriverbidi crate."
license = "MIT"
repository = "https://github.com/TahaHachana/bot"

[dependencies]
thiserror = "2.0.9"
webdriverbidi = "0.1.7"
log = "0.4.22"

[dev-dependencies]
tokio = "1.42.0"